fixed overflow on pagination

--- a/scss/partials/_animation.scss
+++ b/scss/partials/_animation.scss
@@ -4,7 +4,7 @@
         animation: slide-in .8s ease-in-out both;
     }
     .text-wrapper {
-        animation: slide-left 1s ease-in-out;
+        animation: slide-left .8s ease-in-out;
     }
 }
 
