--- a/scss/partials/_pagination.scss
+++ b/scss/partials/_pagination.scss
@@ -15,6 +15,7 @@
 
     :nth-child(3) {
         position: relative;
+        overflow: hidden;
         
         &:after {
             content: "";
@@ -48,6 +49,7 @@
     :nth-child(7) {
         transform: rotate(180deg);
         position: relative;
+        overflow: hidden;
         
         &:after {
             content: "";
